--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,17 @@
+# fly.toml app configuration file generated for uptime-kuma-delicate-snowflake-45 on 2024-07-07T18:35:34-04:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'uptime-kuma-delicate-snowflake-45'
+primary_region = 'iad'
+
 [build]
-  image = "louislam/uptime-kuma:latest"
+  image = 'louislam/uptime-kuma:latest'
 
 [[mounts]]
-  source = "kuma_data"
-  destination = "/app/data"
+  source = 'kuma_data'
+  destination = '/app/data'
 
 [http_service]
   internal_port = 3001
@@ -11,4 +19,9 @@
   auto_stop_machines = false
   auto_start_machines = true
   min_machines_running = 1
-  processes = ["app"]
+  processes = ['app']
+
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
